--- a/components/views/navigation/toolbar/alerts/Alerts.less
+++ b/components/views/navigation/toolbar/alerts/Alerts.less
@@ -1,7 +1,32 @@
 #alerts {
-  transition: all @animation-speed ease;
-}
-.alerts-clear-button {
-  margin-bottom: 5px;
-  box-shadow: none !important;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: @light-spacing;
+
+  top: 45px;
+  left: -8px;
+  max-height: 50vh;
+  width: 27rem;
+  padding: @light-spacing @xlight-spacing;
+  cursor: default;
+  overflow-y: scroll;
+  &:extend(.background-semitransparent-light);
+  &:extend(.round-corners);
+  &:extend(.bordered);
+  &:extend(.blur);
+
+  .header {
+    .subtitle {
+      font-size: @micro-text-size !important;
+      font-family: @primary-font;
+    }
+    font-size: @micro-text-size !important;
+    font-family: @primary-font;
+  }
+
+  button {
+    flex-shrink: 0;
+    width: fit-content;
+  }
 }
